--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@ http://www.bootstrapzero.com
 
 */
 
+@import url(https://fonts.googleapis.com/css?family=Questrial);
+@import url(http://fonts.googleapis.com/css?family=Dancing+Script:700);
 
 html,
 body {
@@ -13,7 +15,7 @@ body {
 }
 
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
     background-color: #282828;
     color: #d3d3d3;
     webkit-tap-highlight-color: #222;
@@ -45,7 +47,7 @@ a:focus {
 }
 
 h1,h2,h3,h4,h5,h6 {
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
 }
 
 p {
@@ -70,6 +72,11 @@ p {
 .bg-dark {
     color: #eee;
     background-color: #222;
+}
+
+.cursive {
+    font-family: 'Dancing Script', cursive;
+    text-transform: none;
 }
 
 .text-faded {
