--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 body {
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
+    font-family: 'Lato', sans-serif;
     background-color: #282828;
     color: #d3d3d3;
     webkit-tap-highlight-color: #222;
@@ -39,8 +39,7 @@ a:focus {
 }
 
 h1,h2,h3,h4,h5,h6 {
-    font-family: 'Roboto', sans-serif;
-	font-style: italic;
+    font-family: 'PT Sans', sans-serif;
 }
 
 p {
@@ -101,7 +100,7 @@ footer {
 
 .navbar-default {
     border-color: rgba(35,35,35,.05);
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
+    font-family: 'PT Sans', sans-serif;
     background-color: #222;
     -webkit-transition: all .4s;
     -moz-transition: all .4s;
@@ -109,7 +108,7 @@ footer {
 }
 
 .navbar-header > .navbar-brand {
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
+    font-family: 'PT Sans', sans-serif;
     color: #9c27b0;
     padding: 15px;
     -webkit-transition: padding .2s ease-in;
@@ -241,8 +240,8 @@ header .header-content .inner h1 {
     margin-top: 0;
     margin-bottom: 0;
 	font-size: 5em;
-	color: black;
-	background-color: white;
+	background-color: #52a8ab;
+	color: white;
 }
 
 header .header-content .inner p {
@@ -251,7 +250,6 @@ header .header-content .inner p {
 	font-family: 'Lato', Helvetica;
     font-weight: 400;
     color: white;
-	color: white;
 	background-color: black;
 }
 
@@ -487,7 +485,7 @@ fieldset[disabled] .btn-default.active {
 .btn {
     border: 0;
     border-radius: 290px;
-    font-family: 'Helvetica Neue',Arial,sans-serif;
+    font-family: 'Lato',sans-serif;
 }
 
 .btn-xl {
