--- a/css/styles.css
+++ b/css/styles.css
@@ -236,12 +236,16 @@ header .header-content {
     z-index: 2;
 }
 
+#logo {
+	max-width: 60%;
+}
+
 header .header-content .inner h1 {
     margin-top: 0;
     margin-bottom: 0;
 	font-size: 5em;
-	background-color: #52a8ab;
 	color: white;
+	text-shadow: 1px 3px 2px #121212;
 }
 
 header .header-content .inner p {
@@ -250,6 +254,7 @@ header .header-content .inner p {
 	font-family: 'Lato', Helvetica;
     font-weight: 400;
     color: white;
+	text-shadow: 1px 1px 1px #121212;
 }
 
 #video-background {
