--- a/css/styles.css
+++ b/css/styles.css
@@ -238,11 +238,12 @@ header .header-content {
 
 #logo {
 	max-width: 60%;
+	margin-bottom: 3%;
 }
 
 header .header-content .inner h1 {
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 3%;
 	font-size: 5em;
 	color: white;
 	text-shadow: 1px 3px 2px #121212;
