--- a/css/styles.css
+++ b/css/styles.css
@@ -220,7 +220,7 @@ header {
     color: #fff;
     width: 100%;
     background-color: #c9c9c9;
-    background-image: url('/img/P10001450.jpg');
+    background-image: url('../img/P100014500.jpg');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
