--- a/css/styles.css
+++ b/css/styles.css
@@ -257,7 +257,7 @@ header .header-content .inner p {
     color: white;
 }
 
-#pdfbutton {
+.pdfbutton {
 	padding-left: 2.5%;
 	padding-right: 2.5%;
 	padding-top: 1.5%;
