--- a/css/styles.css
+++ b/css/styles.css
@@ -266,7 +266,7 @@ header .header-content .inner p {
 	border-radius: 25px;
 }
 
-.inner #pdfbutton {
+.inner .pdfbutton {
 	font-family: 'PT Sans', sans-serif;
 	font-weight: 700;
 	text-decoration: none;
