--- a/css/styles.css
+++ b/css/styles.css
@@ -269,6 +269,7 @@ header .header-content .inner p {
 .inner .pdfbutton {
 	font-family: 'PT Sans', sans-serif;
 	font-weight: 700;
+	font-style: italic;
 	text-decoration: none;
 	color: white;
 }
