--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ hr.light {
 }
 
 a {
-    color: #9c27b0;
+    color: #0090a1;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -75,7 +75,7 @@ p {
 }
 
 .text-primary {
-    color: #9c27b0;
+    color: #0090a1;
 }
 
 .modal-content {
@@ -110,7 +110,7 @@ footer {
 
 .navbar-header > .navbar-brand {
     font-family: 'PT Sans', sans-serif;
-    color: #9c27b0;
+    color: #0090a1;
     padding: 15px;
     -webkit-transition: padding .2s ease-in;
     -moz-transition: padding .2s ease-in;
@@ -139,12 +139,12 @@ footer {
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-    color: #9c27b0;
+    color: #0090a1;
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #9c27b0 !important;
+    color: #0090a1 !important;
     background-color: transparent;
 }
 
@@ -192,7 +192,7 @@ footer {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 15px;
-        color: #9c27b0;
+        color: #0090a1;
         padding: 20px;
         letter-spacing: 1px;
     }
@@ -210,7 +210,7 @@ footer {
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #9c27b0;
+        color: #0090a1;
     }
 }
 
