--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ footer {
 .navbar-default {
     border-color: rgba(35,35,35,.05);
     font-family: 'PT Sans', sans-serif;
-    background-color: f8d68d;
+    background-color: #222;
     -webkit-transition: all .4s;
     -moz-transition: all .4s;
     transition: all .4s;
