changed mobile menu focus color

--- a/css/styles.css
+++ b/css/styles.css
@@ -169,7 +169,7 @@ footer {
 
     .navbar-default .navbar-header .navbar-brand:hover,
     .navbar-default .navbar-header .navbar-brand:focus {
-        color: #f4f4f4;
+        color: #0090a1;
     }
 
     .navbar-default .nav > li>a,
