--- a/css/styles.css
+++ b/css/styles.css
@@ -199,12 +199,12 @@ footer {
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: #8b27b0;
+        color: #0090a1;
     }
 
     .navbar-default.affix .nav > li>a,
     .navbar-default.affix .nav>li>a:focus {
-        color: #ddd;
+        color: #0090a1;
         text-shadow: 1px 1px 1px rgba(30,30,30,0.7);
     }
 
