--- a/css/styles.css
+++ b/css/styles.css
@@ -144,7 +144,7 @@ footer {
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #0090a1 !important;
+    color: #fff !important;
     background-color: transparent;
 }
 
