changed about modal

--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,14 @@ header .header-content .inner p {
 	color: white;
 }
 
+#aboutmodal .pdfbutton {
+	font-family: 'PT Sans', sans-serif;
+	font-weight: 700;
+	font-style: italic;
+	text-decoration: none;
+	color: white;
+}
+
 #video-background {
   position: absolute;
   right: 0; 
