--- a/css/styles.css
+++ b/css/styles.css
@@ -274,7 +274,7 @@ header .header-content .inner p {
 	color: white;
 }
 
-#aboutmodal .pdfbutton {
+#aboutmodal a {
 	font-family: 'PT Sans', sans-serif;
 	font-weight: 700;
 	font-style: italic;
