--- a/css/styles.css
+++ b/css/styles.css
@@ -265,6 +265,7 @@ header .header-content .inner p {
 	padding-bottom: 1.5%;
 	background-color: #0090a1;
 	border-radius: 25px;
+	color: white;
 }
 
 #video-background {
