--- a/css/styles.css
+++ b/css/styles.css
@@ -286,7 +286,7 @@ header .header-content .inner p {
   display:none;
 }
 
-.panel-title {
+.panel-heading {
 	font-family: 'PT Sans', sans-serif;
 	font-style: italic;
 	background-color: #0090a1;
