--- a/css/styles.css
+++ b/css/styles.css
@@ -291,6 +291,7 @@ header .header-content .inner p {
 	font-style: italic;
 	background-color: #0090a1;
 	color: white;
+	border: none;
 }
 
 footer {
