--- a/css/styles.css
+++ b/css/styles.css
@@ -289,6 +289,7 @@ header .header-content .inner p {
 .panel-default > .panel-heading {
 	font-family: 'PT Sans', sans-serif;
 	font-style: italic;
+	font-weight: 700;
 	background-color: #0090a1;
 	color: white;
 	border: none;
