--- a/css/styles.css
+++ b/css/styles.css
@@ -293,7 +293,7 @@ header .header-content .inner p {
 	color: #0090a1;
 }
 
-.panelbody ul {
+.panel-default .panel-body {
 	color: #2d2d2d;
 	font-family: 'Lato', sans-serif;
 }
