--- a/css/styles.css
+++ b/css/styles.css
@@ -298,6 +298,11 @@ header .header-content .inner p {
 	font-family: 'Lato', sans-serif;
 }
 
+#five {
+	color: white;
+	background-color: #0090a1;
+}
+
 footer {
     background-color:#2d2d2d;
 }
