--- a/css/styles.css
+++ b/css/styles.css
@@ -291,6 +291,10 @@ header .header-content .inner p {
 	font-family: 'Lato', sans-serif;
 }
 
+#dome {
+	max-width: 50%;
+}
+
 #five {
 	color: white;
 	background-color: #0090a1;
