--- a/css/styles.css
+++ b/css/styles.css
@@ -280,6 +280,8 @@ header .header-content .inner p {
   width: auto; 
   height: auto;
   z-index: 1;
+  background-position: center;
+  background-size: cover;
 }
 
 #video-background.collapsing {
