--- a/css/styles.css
+++ b/css/styles.css
@@ -247,7 +247,7 @@ header .header-content .inner h1 {
     margin-top: 0;
     margin-bottom: 3%;
 	font-size: 5em;
-	color: white: ;
+	color: white;
 }
 
 header .header-content .inner p {
