--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,7 @@ footer {
 
 .navbar-header > .navbar-brand {
     font-family: 'PT Sans', sans-serif;
+	font-weight: 700;
     color: #0090a1;
     padding: 15px;
     -webkit-transition: padding .2s ease-in;
