changed background to white

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 body {
-    background-color: #282828;
+    background-color: #fff;
     color: #d3d3d3;
     webkit-tap-highlight-color: #222;
 }
