--- a/css/styles.css
+++ b/css/styles.css
@@ -318,6 +318,14 @@ header .header-content .inner p {
 	padding: .5%;
 }
 
+.visiontitlehealth li {
+	color: #0090a1;
+}
+
+.visiontitlehealth li span {
+	color: #2d2d2d;
+}
+
 #six {
 	color: white; 
 	background-color: #c5484c;
