--- a/css/styles.css
+++ b/css/styles.css
@@ -318,11 +318,11 @@ header .header-content .inner p {
 	padding: .5%;
 }
 
-.visiontitlehealth li {
+.healthbullet li {
 	color: #0090a1;
 }
 
-.visiontitlehealth li span {
+.healthbullet li span {
 	color: #2d2d2d;
 }
 
@@ -341,6 +341,14 @@ header .header-content .inner p {
 	padding: .5%;
 }
 
+.economicbullet li {
+	color: #c5484c;
+}
+
+.economicbullet li span {
+	color: #2d2d2d;
+}
+
 #seven {
 	color: white; 
 	background-color: #72549d;
@@ -354,6 +362,14 @@ header .header-content .inner p {
 	color: #72549d;
 	background-color: #f8d68d;
 	padding: .5%;
+}
+
+.investbullet li {
+	color: #72549d;
+}
+
+.investbullet li span {
+	color: #2d2d2d;
 }
 
 .modal-content h5 {
