--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ footer {
 .navbar-default {
     border-color: rgba(35,35,35,.05);
     font-family: 'PT Sans', sans-serif;
-	font-size: 1em;
+	font-size: .8em;
     background-color: #2D2D2D;
     -webkit-transition: all .4s;
     -moz-transition: all .4s;
@@ -122,7 +122,7 @@ footer {
 .navbar-header > .navbar-brand {
     font-family: 'PT Sans', sans-serif;
 	font-weight: 700;
-	font-size: 1.2em;
+	font-size: 1em;
     color: #0090a1;
     padding: 15px;
     -webkit-transition: padding .2s ease-in;
