--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,20 @@ footer {
     }
 }
 
+#donate {
+	padding-left: 1%;
+	padding-right: 1%;
+	padding-top: 1.3%;
+	padding-bottom: 1.3%;
+	background-color: #f8d68d;
+	border-radius: 25px;
+	color: #0090a1;
+	font-family: 'PT Sans', sans-serif;
+	font-weight: 700;
+	font-style: italic;
+}
+
+
 header {
     position: relative;
     min-height: auto;
