--- a/css/styles.css
+++ b/css/styles.css
@@ -231,12 +231,12 @@ footer {
 	padding-right: 1%;
 	padding-top: 1.3%;
 	padding-bottom: 1.3%;
-	background-color: #f8d68d;
 	border-radius: 25px;
 	color: #0090a1;
 	font-family: 'PT Sans', sans-serif;
 	font-weight: 700;
 	font-style: italic;
+	font-size: 1.5em;
 }
 
 
