--- a/css/styles.css
+++ b/css/styles.css
@@ -328,6 +328,7 @@ header .header-content .inner p {
 	font-family: 'PT Sans', sans-serif;
 	font-style: italic;
 	font-weight: 700;
+	font-size: 1.7em;
 	color: #0090a1;
 	background-color: #f8d68d;
 	padding: .5%;
@@ -351,6 +352,7 @@ header .header-content .inner p {
 	font-family: 'PT Sans', sans-serif;
 	font-style: italic;
 	font-weight: 700;
+	font-size: 1.7em;
 	color: #c5484c;
 	background-color: #f8d68d;
 	padding: .5%;
@@ -374,6 +376,7 @@ header .header-content .inner p {
 	font-family: 'PT Sans', sans-serif;
 	font-style: italic;
 	font-weight: 700;
+	font-size: 1.7em;
 	color: #72549d;
 	background-color: #f8d68d;
 	padding: .5%;
