--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,11 @@ section {
     padding: 70px 0;
 }
 
+.card-header a {
+	text-decoration: none;
+	color: white;
+}
+
 aside {
     padding: 50px 0;
 }
