--- a/css/styles.css
+++ b/css/styles.css
@@ -331,6 +331,11 @@ header .header-content .inner p {
 	padding-left: 2%;
 }
 
+#five a {
+	color: white;
+	text-decoration: none;
+}
+
 .visiontitlehealth {
 	font-family: 'PT Sans', sans-serif;
 	font-style: italic;
