--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,18 @@ h1,h2,h3,h4,h5,h6 {
     font-family: 'PT Sans', sans-serif;
 }
 
+li {
+	font-size: 1.2em;
+	font-family: 'Lato', sans-serif;
+}
+
+.more {
+	font-family: 'PT Sans', sans-serif;
+	font-size: 1.3em;
+	font-weight: 700;
+	padding-left: 2.3%;
+}
+
 p {
     font-size: 17px;
     line-height: 1.7;
