--- a/css/styles.css
+++ b/css/styles.css
@@ -362,8 +362,8 @@ header .header-content .inner p {
 	color: #0090a1;
 }
 
-.healthbullet li span {
-	color: #2d2d2d;
+.healthbullet li a {
+	color: #0090a1;
 }
 
 #six {
@@ -388,7 +388,6 @@ header .header-content .inner p {
 
 .economicbullet li a {
 	color: #c5484c;
-	text-decoration: none;
 }
 
 #seven {
