--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,20 @@ p {
 	font-family: 'Lato', sans-serif;
 }
 
+#poosignup {
+	padding-left: 1.5%;
+	padding-right: 1.5%;
+	padding-top: .5%;
+	padding-bottom: .5%;
+	background-color: #f8d68d;
+	border-radius: 25px;
+	color: #0090a1;
+	font-family: 'PT Sans', sans-serif;
+	font-weight: 700;
+	font-style: italic;
+	font-size: 1.5em;
+}
+
 .wide-space {
     letter-spacing: 1.6px;
 }
