--- a/wrapup/css/styles.css
+++ b/wrapup/css/styles.css
@@ -56,30 +56,12 @@ li {
 p {
     font-size: 17px;
     line-height: 1.7;
-    margin-bottom: 20px;
 	font-family: 'Lato', sans-serif;
 }
 
-#poopic {
-	max-width: 25%;
-}
-
-#poosection {
-	color: #0D0D0D;
-}
-
-.poosignup {
-	padding-left: 1.5%;
-	padding-right: 1.5%;
-	padding-top: .5%;
-	padding-bottom: .5%;
-	background-color: #f8d68d;
-	border-radius: 25px;
-	color: #0090a1;
-	font-family: 'PT Sans', sans-serif;
-	font-weight: 700;
-	font-style: italic;
-	font-size: 1.5em;
+#coversection {
+	padding-right: 30%;
+	padding-left: 30%;
 }
 
 .wide-space {
