changed padding on cover image

--- a/wrapup/css/styles.css
+++ b/wrapup/css/styles.css
@@ -65,8 +65,9 @@ p {
 }
 
 #coverimage {
-	max-width: 50%;
-	
+	max-width: 45%;
+	padding-left: 27.50%;
+	padding-right: 27.50%;
 }
 
 .wide-space {
