--- a/wrapup/css/styles.css
+++ b/wrapup/css/styles.css
@@ -72,6 +72,10 @@ p {
     letter-spacing: 1.6px;
 }
 
+figcaption {
+	font-family: Lato, sans-serif;
+}
+
 .icon-lg {
     font-size: 50px;
     line-height: 18px;
