added padding to list and h1

--- a/wrapup/css/styles.css
+++ b/wrapup/css/styles.css
@@ -371,6 +371,9 @@ header .header-content .inner p {
 .well {
 	background-color: #0090a1;
 	color: white;
+}
+
+.well h1 li { 
 	padding-left: .5%;
 	padding-top: .5%;
 	padding-bottom: .5%;
