--- a/wrapup/css/styles.css
+++ b/wrapup/css/styles.css
@@ -379,6 +379,17 @@ header .header-content .inner p {
 	padding-left: 2%;
 }
 
+#eoobjectives {
+	background-color: #c5484c;
+	color: white;
+	padding-top: .3%;
+	padding-bottom: 1%;
+}
+
+#eoobjectives h1, li {
+	padding-left: 2%;
+}
+
 
 .visiontitlehealth {
 	font-family: 'PT Sans', sans-serif;
