--- a/wrapup/css/styles.css
+++ b/wrapup/css/styles.css
@@ -375,7 +375,7 @@ header .header-content .inner p {
 	padding-bottom: 1%;
 }
 
-#hwobjectives h2, li {
+#hwobjectives h2 li {
 	padding-left: 2%;
 }
 
@@ -386,10 +386,9 @@ header .header-content .inner p {
 	padding-bottom: 1%;
 }
 
-#eoobjectives h2, li {
-	padding-left: 2.5%;
+#eoobjectives h2 li {
+	padding-left: 2%;
 }
-
 
 .visiontitlehealth {
 	font-family: 'PT Sans', sans-serif;
