--- a/wrapup/css/styles.css
+++ b/wrapup/css/styles.css
@@ -375,7 +375,7 @@ header .header-content .inner p {
 	padding-bottom: 1%;
 }
 
-#hwobjectives h2 li {
+h2, li #hwobjectives {
 	padding-left: 2%;
 }
 
@@ -386,7 +386,7 @@ header .header-content .inner p {
 	padding-bottom: 1%;
 }
 
-#eoobjectives h2 li {
+h2, li, #eoobjectives {
 	padding-left: 2%;
 }
 
