--- a/wrapup/css/styles.css
+++ b/wrapup/css/styles.css
@@ -375,7 +375,7 @@ header .header-content .inner p {
 	padding-bottom: 1%;
 }
 
-h2, li #hwobjectives {
+#hwobjectives h2, li {
 	padding-left: 2%;
 }
 
@@ -386,7 +386,7 @@ h2, li #hwobjectives {
 	padding-bottom: 1%;
 }
 
-h2, li, #eoobjectives {
+#eoobjectives h2, li {
 	padding-left: 2%;
 }
 
