--- a/wrapup/css/styles.css
+++ b/wrapup/css/styles.css
@@ -454,6 +454,15 @@ header .header-content .inner p {
 	padding: .5%;
 }
 
+.itobjectives {
+	background-color: #72549d;
+	color: white;
+}
+
+.itobjectives h2, li {
+	padding-left: 2%;
+}
+
 .investbullet li {
 	color: #72549d;
 	font-family: 'Lato', sans-serif;
