--- a/wrapup/css/styles.css
+++ b/wrapup/css/styles.css
@@ -397,6 +397,7 @@ header .header-content .inner p {
 	color: #0090a1;
 	background-color: #f8d68d;
 	padding: .5%;
+	margin-top: 5%;
 }
 
 .healthbullet li {
@@ -424,6 +425,7 @@ header .header-content .inner p {
 	color: #c5484c;
 	background-color: #f8d68d;
 	padding: .5%;
+	margin-top: 5%;
 }
 
 .economicbullet li {
@@ -451,6 +453,7 @@ header .header-content .inner p {
 	color: #72549d;
 	background-color: #f8d68d;
 	padding: .5%;
+	margin-top: 5%;
 }
 
 .itobjectives {
