--- a/wrapup/css/styles.css
+++ b/wrapup/css/styles.css
@@ -59,6 +59,11 @@ p {
 	font-family: 'Lato', sans-serif;
 }
 
+.special {
+	color: #c5484c;
+	font-weight: 700;
+}
+
 #coversection {
 	padding-right: 20%;
 	padding-left: 20%;
